fixed action buttons flowing out of container width, no request component for managers without manager

--- a/src/main/web-app/src/app/base-view/base-view.component.css
+++ b/src/main/web-app/src/app/base-view/base-view.component.css
@@ -1,5 +1,6 @@
 .layout-container {
  background-color: #FAFAFA;
+ width:100%;
  height:100%;
 }
 
